2006-12-06  Philipp Sehmisch  <tmw@crushnet.org>

	* src/game.cpp, src/gui/popupmenu.cpp, src/gui/viewport.cpp,
	src/localplayer.cpp, src/localplayer.h, src/net/beinghandler.cpp,
	src/net/beinghandler.h, src/net/connection.cpp, src/net/connection.h,
	src/net/gameserver/player.cpp, src/net/gameserver/player.h,
	src/net/playerhandler.cpp, src/net/protocol.h:
	Attacks are now targetless one-time events. The server is informed when the
	client performs an attack and attack messages from the server are received
	and displayed.

2006-12-09  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* data/graphics/sprites/npcs.png: Added pirate NPC.

2006-12-09  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/sprite.h, src/gui/playerbox.h, src/gui/char_select.cpp,
	src/gui/playerbox.cpp, src/gui/passwordfield.h,src/gui/char_select.h,
	src/gui/textfield.h, src/main.cpp, src/being.cpp, src/player.h,
	src/floor_item.h, src/being.h: Use new animation system in character
	selection/creation. Shows equipment and allowed for some cleanup. Had
	a bit of help from the patch by VictorSan.

2006-12-08  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/base64.cpp, src/base64.h, src/resources/mapreader.cpp:
	Downgraded to base64 codec from PHP 3 to resolve licensing issues.

2006-12-06  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* The Mana World.dev, tmw.cbp: Updated project files.

2006-12-06  Philipp Sehmisch  <tmw@crushnet.org>

	* src/net/beinghandler.cpp: Fixed crashs when changing equipment.
	* data/graphics/tiles/desert1.png, data/graphics/tiles/desert2.png:
	More tiling related fixes at the cliffs.

2006-12-06  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/item_amount.cpp: Fixed visibility of item amount window.

2006-12-05  Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/tiles/desert1.png: Improved the tiling behavior
	of the cliffs (still not gridless but at least the edges fit
	together in the most common situations)

2006-12-04  Bjørn Lindeijer  <bjorn@lindeijer.nl>
