@@ -159,7 +159,7 @@ enum {
     GPMSG_BEING_LEAVE              = 0x0201, // W being id
     PGMSG_WALK                     = 0x0260, // W*2 destination
     GPMSG_BEINGS_MOVE              = 0x0280, // { W being id, B flags [, C position] [, W*2 destination] }*
-    PGMSG_ATTACK                   = 0x0290, // -
+    PGMSG_ATTACK                   = 0x0290, // B direction
     GPMSG_BEING_ATTACK             = 0x0291, // W being id
     PGMSG_SAY                      = 0x02A0, // S text
     GPMSG_SAY                      = 0x02A1, // W being id, S text
@@ -167,6 +167,7 @@ enum {
     GPMSG_USE_RESPONSE             = 0x0301, // B error
     PGMSG_EQUIP                    = 0x0302, // L item id, B slot
     GPMSG_EQUIP_RESPONSE           = 0x0303, // B error
+    GPMSG_BEINGS_DAMAGE            = 0x0310, // { W being id, W ammount }*
 
     // Chat
     CPMSG_ERROR                    = 0x0401, // B error
